[project]
name = "comfyui-image-vector"
description = ""
version = "1.0.1"
license = "LICENSE"
dependencies = ["vtracer", "Wand", "Pillow", "torch", "numpy"]

[project.urls]
Repository = "https://github.com/AARG-FAN/Image-Vector-for-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Image-Vector"
Icon = ""
