[project]
name = "comfyui-image-vector"
description = "modify the original node instruction of image vector, add ‘imagemagick’ which is the key base Python library of ‘wand’ library."
version = "1.0.1"
license = "LICENSE"
dependencies = ["vtracer", "Wand", "Pillow", "torch", "numpy"]

[project.urls]
Repository = "https://github.com/AARG-FAN/Image-Vector-for-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyber-blackcat"
DisplayName = "ComfyUI-Image-Vector"
Icon = ""
