[project]
name = "comfyui-image-vector"
description = "把图片转为矢量图，concert image to raster. "
version = "1.0.0"
license = "LICENSE"
dependencies = ["vtracer", "Wand", "Pillow", "torch", "numpy"]

[project.urls]
Repository = "https://github.com/Cyber-BlackCat/ComfyUI-Image-Vector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cyber-blackcat"
DisplayName = "ComfyUI-Image-Vector"
Icon = ""
